# Thesis_Breast_Cancer_Diagnosis_Screening_via_Deep_learning

./: LICENSE  README.md
notebooks/: 100_.ipynb  Copy of Copy of Copy of Copy of Preprocess.ipynb  Copy of Copy of Copy of Preprocess.ipynb  Copy of Copy of Preprocess.ipynb  Copy of Copy of Thesis_seg.ipynb  Copy of Preprocess.ipynb  Copy of Thesis_seg.ipynb  Copy of Unet + EfficientNet.ipynb  Copy of oxford_pets_image_segmentation  PS2CThesis.ipynb  Preprocess.ipynb  Thesis.ipynb  Untitled12.ipynb
python_files/: .replit  app.py  combined_output.py  merger.py  pyproject.toml  replit.md
python_files/models/: efficientnet.py  meta_pseudo_labels.py  unet.py
python_files/training/: train_classifier.py  train_mpl.py  train_segmentation.py
python_files/utils/: augmentation.py  metrics.py  preprocessing.py  visualization.py
